--- a/gather/templates/wash/basket.html
+++ b/gather/templates/wash/basket.html
@@ -60,7 +60,19 @@
                 <div clss="row">
                     <div class="col-xs-12 text-left">
                         <h4>
-                            <label style="color:red">￥</label><label class="media-heading" name="price" value="{{ wash.id }}">{{ wash.new_price }}</label>元({{ wash.measure }})
+                            <label style="color:red">￥</label>
+                            <label class="media-heading" name="price" value="{{ wash.id }}">{{ wash.new_price }}</label>元({{ wash.measure }})
+                            {% if wash.is_for_company %}
+                            {% if wash.short_desc %}
+                            <span class="label label-danger">
+                                {{ wash.short_desc }}
+                            </span>
+                            {% else %}
+                            <span class="label label-success">
+                                合作
+                            </span>
+                            {% endif %}
+                            {% endif %}
                         </h4>
                     </div>
                 </div>
