--- a/gather/templates/wash/manage/base.html
+++ b/gather/templates/wash/manage/base.html
@@ -92,6 +92,12 @@
 								<span class="menu-text"> 用户管理 </span>
 							</a>
 						</li>
+						<li>
+							<a href="{% url 'manage_company' %}">
+								<i class="icon-desktop"></i>
+								<span class="menu-text"> 公司管理 </span>
+							</a>
+						</li>
 
 						<li>
 							<a href="#">
@@ -99,7 +105,12 @@
 								<span class="menu-text"> 省市县 </span>
 							</a>
 						</li>
-
+						<li>
+							<a href="{% url 'manage_company_discount' %}">
+								<i class="icon-gift "></i>
+								<span class="menu-text"> 公司优惠 </span>
+							</a>
+						</li>
 						<li>
 							<a href="{% url 'manage_discount' %}">
 								<i class="icon-gift"></i>
@@ -108,7 +119,7 @@
 						</li>
 						<li>
 							<a href="{% url 'manage_wash_type' %}">
-								<i class="icon-gift"></i>
+								<i class="icon-book "></i>
 								<span class="menu-text"> 洗刷清单 </span>
 							</a>
 						</li>
