--- a/gather/templates/wash/manage/wash_type_add.html
+++ b/gather/templates/wash/manage/wash_type_add.html
@@ -39,6 +39,14 @@
                         <td>{{ form.belong }}</td>
                     </tr>
                     <tr>
+                        <td>是否公司合作</td>
+                        <td>
+                            <input type="radio" name="is_for_company" value="1"/>是
+                            &nbsp;&nbsp;&nbsp;
+                            <input type="radio" name="is_for_company" value="0" checked/>否
+                        </td>
+                    </tr>
+                    <tr>
                         <td>照片(宽>长)</td>
                         <td>
                            <input type="file" name="photo" id="upload_file"/>
