--- a/gather/templates/wash/regist.html
+++ b/gather/templates/wash/regist.html
@@ -55,6 +55,12 @@
               <button type="button" class="btn btn-info" id="verify_code" style="margin-top:5px;">获取验证码</button>
            </div>
         </div>
+        <br><br>
+        <div class="row-fluid" style="margin-top:10px;">
+           <div class="col-xs-12">
+              <input class="form-control" name="short" type="text" placeholder="请输入公司验证码(选填)">
+           </div>
+        </div>
         <br>
         <div class="row-fluid" style="margin-top:40px;margin-bottom:100px;">
            <div class="col-xs-12">
