--- a/gather/templates/wash/manage/discount_add.html
+++ b/gather/templates/wash/manage/discount_add.html
@@ -11,6 +11,9 @@
 {% endblock %}
 
 {% block content %}
+{% for error in form.non_field_errors %}
+<div class="alert alert-danger text-center" role="alert">{{ error }}</div>
+{% endfor %}
 <div class="row">
     <div class="col-xs-12">
         <div class="table-responsive" style="margin-top:10px;">
@@ -23,27 +26,53 @@
                         <td>{{ form.name }}</td>
                     </tr>
                     <tr>
+                        <td>*优惠范围</td>
+                        <td>{{ form.range_type }}</td>
+                    </tr>
+                    <tr>
                         <td>*优惠规格</td>
                         <td>{{ form.price }}</td>
+                    </tr>
+                     <tr>
+                        <td>*优惠类型</td>
+                        <td>{{ form.discount_type }}</td>
                     </tr>
                     <tr>
                         <td>*优惠对象</td>
                         <td>{{ form.wash_type }}</td>
                     </tr>
                     <tr>
-                        <td>优惠类型</td>
-                        <td>{{ form.discount_type }}</td>
+                        <td>公司合作</td>
+                        <td>
+                            <select name="company">
+                                <option value="0">无</option>
+                                {% for company in companys %}
+                                <option value="{{ company.id }}">{{ company.name }}</option>
+                                {% endfor %}
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>针对某一产品(优惠范围为单个时选择)</td>
+                        <td>
+                            <select name="wash">
+                                <option value="0">无</option>
+                                {% for wash in washes %}
+                                <option value="{{ wash.id }}">{{ wash.desc }}</option>
+                                {% endfor %}
+                            </select>
+                        </td>
                     </tr>
                     <tr>
                         <td>开始时间</td>
                         <td>
-                            <input class="form-control valid select-style" style="margin-bottom: 0;width:150px;" type="date" id="begin" name="begin"/>
+                            <input value="{{ today }}" class="form-control valid select-style" style="margin-bottom: 0;width:150px;" type="date" id="begin" name="begin"/>
                         </td>
                     </tr>
                     <tr>
                         <td>结束时间</td>
                         <td>
-                            <input class="form-control valid select-style" style="margin-bottom: 0;width:150px;" type="date" id="end" name="end"/>
+                            <input value="{{ next }}" class="form-control valid select-style" style="margin-bottom: 0;width:150px;" type="date" id="end" name="end"/>
                         </td>
                     </tr>
 
