--- a/gather/templates/wash/manage/discount_update.html
+++ b/gather/templates/wash/manage/discount_update.html
@@ -11,11 +11,15 @@
 {% endblock %}
 
 {% block content %}
+{% for error in form.non_field_errors %}
+<div class="alert alert-danger text-center" role="alert">{{ error }}</div>
+{% endfor %}
 <div class="row">
     <div class="col-xs-12">
         <div class="table-responsive" style="margin-top:10px;">
             <form action="." method="post">
                 {% csrf_token %}
+                <input type="hidden" name="update" value="yes"/>
                 <table class="table table-striped table-bordered table-hover">
                     <tbody>
                     <tr>
@@ -23,27 +27,43 @@
                         <td>{{ form.name }}</td>
                     </tr>
                     <tr>
+                        <td>*优惠范围</td>
+                        <td>{{ discount.get_range_type_display }}</td>
+                    </tr>
+                    <tr>
                         <td>*优惠规格</td>
                         <td>{{ form.price }}</td>
                     </tr>
-                    <tr>
-                        <td>*优惠对象</td>
-                        <td>{{ form.wash_type }}</td>
+                     <tr>
+                        <td>*优惠类型</td>
+                        <td>{{ form.discount_type }}</td>
                     </tr>
                     <tr>
-                        <td>优惠类型</td>
-                        <td>{{ form.discount_type }}</td>
+                        <td>*优惠对象</td>
+                        <td>{{ discount.get_wash_type_display }}</td>
+                    </tr>
+                    <tr>
+                        <td>公司合作</td>
+                        <td>
+                            {{ discount.company.name|default:'无' }}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>针对某一产品</td>
+                        <td>
+                            {{ discount.wash.desc|default:'无' }}
+                        </td>
                     </tr>
                     <tr>
                         <td>开始时间</td>
                         <td>
-                            <input value="{{ discount.begin|date:'Y-m-d H:i:s' }}" class="form-control valid select-style" style="margin-bottom: 0;width:150px;" type="date" id="begin" name="begin"/>
+                            <input value="{{ discount.begin }}" class="form-control valid select-style" style="margin-bottom: 0;width:150px;" type="date" id="begin" name="begin"/>
                         </td>
                     </tr>
                     <tr>
                         <td>结束时间</td>
                         <td>
-                            <input value="{{ discount.end|date:'Y-m-d H:i:s' }}" class="form-control valid select-style" style="margin-bottom: 0;width:150px;" type="date" id="end" name="end"/>
+                            <input value="{{ discount.end }}" class="form-control valid select-style" style="margin-bottom: 0;width:150px;" type="date" id="end" name="end"/>
                         </td>
                     </tr>
 
