--- a/gather/templates/wash/manage/user_list.html
+++ b/gather/templates/wash/manage/user_list.html
@@ -20,7 +20,7 @@
                     <th class="center">序号</th>
                     <th>电话</th>
                     <th>是否验证</th>
-
+                    <th>所属公司</th>
                     <th>
                         <i class="icon-time bigger-110"></i>
                         创建日期
@@ -33,6 +33,7 @@
                     <td>{{ user.id }}</td>
                     <td>{{ user.phone }}</td>
                     <td>{{ user.is_phone_verified }}</td>
+                    <td>{{ user.company.name|default:'无' }}</td>
                     <td>{{ user.created|date:'Y-m-d H:i:s' }}</td>
                 </tr>
                 {% endfor %}
