--- a/gather/templates/wash/manage/wash_type_update.html
+++ b/gather/templates/wash/manage/wash_type_update.html
@@ -46,6 +46,14 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>公司合作</td>
+                        <td>
+                            <input type="radio" name="is_for_company" value="1" {% if type.is_for_company == 1 %}checked{% endif %}/>是
+                            &nbsp;&nbsp;&nbsp;
+                            <input type="radio" name="is_for_company" value="0" {% if type.is_for_company == 0 %}checked{% endif %}/>否
+                        </td>
+                    </tr>
+                    <tr>
                         <td>备注</td>
                         <td><input type="text" value="{{ type.mark }}" name="mark"/></td>
                     </tr>
