--- a/gather/templates/wash/show.html
+++ b/gather/templates/wash/show.html
@@ -6,7 +6,7 @@
         <li role="presentation" value="3"><a href="#">裤子</a></li>
         <li role="presentation" value="1"><a href="#">鞋</a></li>
         <li role="presentation" value="5"><a href="#">家居</a></li>
-        <li role="presentation" value="6"><a href="#">单位</a></li>
+        <li role="presentation" value="6"><a href="#">其他</a></li>
     </ul>
     {% endblock %}
 
