--- a/gather/templates/wash/manage/company_add.html
+++ b/gather/templates/wash/manage/company_add.html
@@ -1,6 +1,7 @@
 <!-- Modal -->
 <div class="modal fade" id="company_add" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <form class="form-horizontal" role="form" method="post" action=".">
+        {% csrf_token %}
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -12,7 +13,7 @@
                     <div class="form-group">
                         <label class="col-md-2 control-label">公司名称</label>
                         <div class="col-md-10">
-                            <input type="email" class="form-control" name='name' placeholder="公司名称..">
+                            <input type="text" class="form-control" name='name' placeholder="公司名称..">
                         </div>
                     </div>
 
