--- a/gather/templates/wash/pay.html
+++ b/gather/templates/wash/pay.html
@@ -14,44 +14,26 @@
 {% endblock %}
 
 {% block extra_js %}
+<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+
 <script>
-    function onBridgeReady(){
-       WeixinJSBridge.invoke(
-           'getBrandWCPayRequest', {
-               "appId" ： "{{ appId }}",     //公众号名称，由商户传入
-               "timeStamp"：" {{ timeStamp }}",         //时间戳，自1970年以来的秒数
-               "nonceStr" ： "{{ nonceStr }}", //随机串
-               "package" ： "{{ package }}",
-               "signType" ： "{{ signType }}",         //微信签名方式：
-               "paySign" ： "{{ paySign }}" //微信签名
-           },
-           function(res){
-
-               if(res.err_msg == "get_brand_wcpay_request：ok" ) {
-                            alert("3");
-
-               }    // 使用以上方式判断前端返回,微信团队郑重提示：res.err_msg将在用户支付成功后返回    ok，但并不保证它绝对可靠。
-               else{
-                alert(res);
-                alert(res.err_msg);
-               }
-           }
-       );
-    }
-    if (typeof WeixinJSBridge == "undefined"){
-       if( document.addEventListener ){
-            alert("1");
-           document.addEventListener('WeixinJSBridgeReady', onBridgeReady, false);
-       }else if (document.attachEvent){
-                   alert("2");
-
-           document.attachEvent('WeixinJSBridgeReady', onBridgeReady);
-           document.attachEvent('onWeixinJSBridgeReady', onBridgeReady);
-       }
-    }else{
-                       alert("44");
-
-       onBridgeReady();
-    }
+    wx.config({
+        debug: true,
+        appId: '{{ appId }}',
+        timestamp: {{ timeStamp }},
+        nonceStr: '{{ nonceStr }}',
+        signature: '{{ jsapi_ticket }}',
+        jsApiList: ['chooseWXPay']
+    });
+    wx.chooseWXPay({
+        timestamp: {{ timeStamp }}, // 支付签名时间戳，注意微信jssdk中的所有使用timestamp字段均为小写。但最新版的支付后台生成签名使用的timeStamp字段名需大写其中的S字符
+        nonceStr: '{{ nonceStr }}', // 支付签名随机串，不长于 32 位
+        package: '{{ package }}', // 统一支付接口返回的prepay_id参数值，提交格式如：prepay_id=***）
+        signType: 'MD5', // 签名方式，默认为'SHA1'，使用新版支付需传入'MD5'
+        paySign: '{{ paySign }}', // 支付签名
+        success: function (res) {
+            alert("asdf");
+        }
+    });
 </script>
 {% endblock %}
