--- a/gather/templates/wash/pay.html
+++ b/gather/templates/wash/pay.html
@@ -32,7 +32,7 @@
         signType: 'MD5', // 签名方式，默认为'SHA1'，使用新版支付需传入'MD5'
         paySign: '{{ paySign }}', // 支付签名
         success: function (res) {
-            alert("asdf");
+            alert(res);
         }
     });
 </script>
