--- a/gather/templates/wash/pay.html
+++ b/gather/templates/wash/pay.html
@@ -22,7 +22,7 @@
         appId: '{{ appId }}',
         timestamp: {{ timeStamp }},
         nonceStr: '{{ nonceStr }}',
-        signature: '{{ jsapi_ticket }}',
+        signature: '{{ signature }}',
         jsApiList: ['chooseWXPay']
     });
     wx.chooseWXPay({
