--- a/gather/templates/wash/pay.html
+++ b/gather/templates/wash/pay.html
@@ -18,7 +18,7 @@
 
 <script>
     wx.config({
-        debug: true,
+        debug: false,
         appId: '{{ appId }}',
         timestamp: {{ timeStamp }},
         nonceStr: '{{ nonceStr }}',
