--- a/gather/templates/wash/user_order.html
+++ b/gather/templates/wash/user_order.html
@@ -65,7 +65,7 @@
       </li>
       <li class="list-group-item text-right">
           {% if order.status_id == 0 %}
-          <a href="{% url 'wash_wechat_pay' order.id %}" class="btn btn-info">立即付款</a>
+          <a href="{% url 'wash_wechat_pay' %}?order_id={{ order.id }}" class="btn btn-info">立即付款</a>
           {% elif order.status_id == 1 %}
           <a href="{% url 'wash_user_order_cancel' order.id %}" class="btn btn-default">取消</a>
           {% endif %}
