--- a/gather/templates/wash/pay.html
+++ b/gather/templates/wash/pay.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block title_left %}
-    <a href="{% url 'wash_account' %}"><img class="label_img" src="/static/images/wash/label_left.png" /></a>
+    <a href="{% url 'wash_user_order' %}"><img class="label_img" src="/static/images/wash/label_left.png" /></a>
 {% endblock %}
 
 {% block content %}
@@ -34,10 +34,10 @@
             paySign: '{{ paySign }}',
             success: function (res) {
                 $.ajax({
-                      url: '/pay/update/',
+                      url: '/wash/pay/update/',
                       type: 'POST',
                       dataType: 'json',
-                      data: {'order_id': {{ order_id}} },
+                      data: {'order_id': {{ order_id }} },
                       success: function(Data) {
                           window.location.href = "/wash/user/order/#{{ order_id }}"
                       }
