添加货到付款

--- a/gather/templates/wash/order.html
+++ b/gather/templates/wash/order.html
@@ -61,7 +61,7 @@
                 <div class="media-right text-right">
                     <div style="margin-top:26px;">
                         <input type="radio" value="0" checked="checked" name="am_pm"/>上午&nbsp;&nbsp;&nbsp;
-                        <input type="radio" value="0" name="am_pm"/>下午
+                        <input type="radio" value="1" name="am_pm"/>下午
                     </div>
                 </div>
             </div>
@@ -74,6 +74,17 @@
                 </div>
                 <div class="media-body">
                     <span class="label label-danger">注意</span> <label style="color:grey">衣服小于30件加收8元运费</label>
+                </div>
+            </div>
+        </div>
+        <div class="bs-callout bs-callout-danger">
+            <div class="media">
+                <div class="media-left">
+                    <span class="glyphicon glyphicon-plane" aria-hidden="true" style="margin-top:5px;"></span>
+                </div>
+                <div class="media-body">
+                    <input type="radio" name="pay" value="0" checked>&nbsp;在线支付&nbsp;&nbsp;
+                    <input type="radio" name="pay" value="1">&nbsp;货到付款
                 </div>
             </div>
         </div>
