--- a/gather/templates/wash/manage/order.html
+++ b/gather/templates/wash/manage/order.html
@@ -81,7 +81,7 @@
                         <form action="." method="post">
                             {% csrf_token %}
                             <input type="hidden" name="oid" value="{{ order.id }}"/>
-                        {% if order.status == 1 %}
+                        {% if order.status == 1 or order.status == 10 %}
                             <input type="text" name="hour" placeholder="具体时间"/>
                             <button type="submit" class="btn btn-success" name="next" value="true">
                               <span class="glyphicon glyphicon-ok" aria-hidden="true" id=""></span>确认
