--- a/gather/templates/wash/basket.html
+++ b/gather/templates/wash/basket.html
@@ -1,6 +1,6 @@
 {% extends 'wash/base.html' %}
 {% load staticfiles %}
-
+{% load util_tag %}
 {% block title_left %}
     <a href="{% url 'wash_show' %}"><img class="label_img" src="/static/images/wash/label_left.png" /></a>
 {% endblock %}
@@ -61,7 +61,7 @@
                     <div class="col-xs-12 text-left">
                         <h4>
                             <label style="color:red">￥</label>
-                            <label class="media-heading" name="price" value="{{ wash.id }}">{{ wash.new_price }}</label>元({{ wash.measure }})
+                            <label class="media-heading" name="price" value="{{ wash.id }}">{{ wash.new_price|money_format }}</label>元({{ wash.measure }})
                             {% if wash.is_for_company %}
                             {% if wash.short_desc %}
                             <span class="label label-danger">
