--- a/gather/templates/wash/manage/discount_add.html
+++ b/gather/templates/wash/manage/discount_add.html
@@ -14,6 +14,13 @@
 {% for error in form.non_field_errors %}
 <div class="alert alert-danger text-center" role="alert">{{ error }}</div>
 {% endfor %}
+
+<div class="alert alert-danger text-left" role="alert">
+    <span class="label label-danger">1</span>优惠范围为"全部"的只能有一个<br>
+    <span class="label label-danger">2</span>优惠范围为"类"的, 该"类"只能有一个<br>
+    <span class="label label-danger">3</span>优惠范围为"单个"的, 该"单个"只能有一个
+</div>
+
 <div class="row">
     <div class="col-xs-12">
         <div class="table-responsive" style="margin-top:10px;">
@@ -22,7 +29,7 @@
                 <table class="table table-striped table-bordered table-hover">
                     <tbody>
                     <tr>
-                        <td>*名称</td>
+                        <td>*名称(唯一,不重复)</td>
                         <td>{{ form.name }}</td>
                     </tr>
                     <tr>
@@ -49,6 +56,15 @@
                                 {% for company in companys %}
                                 <option value="{{ company.id }}">{{ company.name }}</option>
                                 {% endfor %}
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>是否为赠送用户的优惠券</td>
+                        <td>
+                            <select name="is_for_user">
+                                <option value="0">否</option>
+                                <option value="1">是</option>
                             </select>
                         </td>
                     </tr>
