--- a/gather/templates/wash/pay.html
+++ b/gather/templates/wash/pay.html
@@ -39,7 +39,7 @@
                       dataType: 'json',
                       data: {'order_id': {{ order_id }} },
                       success: function(Data) {
-                          window.location.href = "/wash/user/order/#{{ order_id }}"
+                          window.location.href = "/wash/pay/success/?oid={{ order_id}}"
                       }
                  });
             },
