--- a/gather/templates/wash/account.html
+++ b/gather/templates/wash/account.html
@@ -25,7 +25,7 @@
             {% if profile %}
                 <img class="img-circle" src="/static/img/av1.png" style="width: 64px; height: 64px;"/>
                 <label>{{ profile.phone }}</label>
-                <a style="margin-left:20%" href="{% url 'wash_recharge'%}">
+                <a style="margin-left:30%" href="{% url 'wash_recharge'%}">
                     <span class="label label-danger">
                        充值
                     </span>
@@ -35,18 +35,20 @@
                 <a href="{% url 'wash_regist' %}">登录/注册</a>
             {% endif %}
        </div>
-        <div href="#" class="list-group-item row">
-            <div class="col-xs-6 text-center">
-                余额&nbsp;<label style="color:red">{{ profile.cash|default:'0.0'|money_format }}</label>元&nbsp;&nbsp;&nbsp;
-            </div>
-            <div class="col-xs-6 text-center">
-                {% if profile.cash > 100000 %}
-                <label style="color:yellow">黄金会员</label>
-                {% elif profile.cash > 50000 %}
-                <label style="color:#999999 ">白银会员</label>
-                {% else %}
-                <label style="color:grey">普通会员</label>
-                {% endif %}
+        <div href="#" class="list-group-item">
+            <div class="row">
+                <div class="col-xs-6 text-center">
+                    余额&nbsp;<label style="color:red">{{ profile.cash|default:'0.0'|money_format }}</label>元&nbsp;&nbsp;&nbsp;
+                </div>
+                <div class="col-xs-6 text-center">
+                    {% if profile.cash > 100000 %}
+                    <label style="color:yellow">黄金会员</label>
+                    {% elif profile.cash > 50000 %}
+                    <label style="color:#999999 ">白银会员</label>
+                    {% else %}
+                    <label style="color:grey">普通会员</label>
+                    {% endif %}
+                </div>
             </div>
        </a>
     </div>
