--- a/gather/templates/wash/pay_test.html
+++ b/gather/templates/wash/pay_test.html
@@ -1,7 +1,7 @@
 {% extends 'wash/base.html' %}
 
 {% block title_center %}
-<img class="top-logo" src="/static/images/wash/address_title.png" width="100">
+<img class="top-logo" src="/static/images/wash/pay.png" width="100">
 {% endblock %}
 
 {% block title_left %}
