--- a/gather/templates/wash/pay.html
+++ b/gather/templates/wash/pay.html
@@ -33,19 +33,14 @@
             signType: 'MD5',
             paySign: '{{ paySign }}',
             success: function (res) {
-                sleep(2000);
-                $.ajax({
-                      url: '/wash/pay/update/',
-                      type: 'POST',
-                      dataType: 'json',
-                      data: {'order_id': {{ order_id }} },
-                      success: function(Data) {
-                          window.location.href = "/wash/pay/success/?oid={{ order_id}}"
-                      }
-                 });
+                window.location.href = "/wash/pay/success/?oid={{ order_id}}"
             },
             cancel: function () {
+                {% if pay_method == 2 %}
+                window.location.href = "/wash/user/account/"
+                {% else %}
                 window.location.href = "/wash/user/order/#{{ order_id }}"
+                {% endif %}
             }
         });
     });
