回调接口添加校验

--- a/gather/templates/wash/pay.html
+++ b/gather/templates/wash/pay.html
@@ -9,7 +9,9 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="text-center" style="margin-top:200px;">
+    <h3><span class="label label-info">加载中...</span></h3>
+</div>
 
 {% endblock %}
 
