删除多余消费记录

--- a/gather/templates/wash/user_order_detail.html
+++ b/gather/templates/wash/user_order_detail.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block title_left %}
-    <a href="{% url 'wash_user_order' %}"><img class="label_img" src="/static/images/wash/label_left.png" /></a>
+    <a href="{% url 'wash_user_order' %}#{{ order.id }}"><img class="label_img" src="/static/images/wash/label_left.png" /></a>
 {% endblock %}
 
 {% block content %}
