修改联系电话

--- a/gather/templates/wash/account.html
+++ b/gather/templates/wash/account.html
@@ -79,7 +79,7 @@
         <div class="list-group-item">
           <div class="media text-center">
                 <span class="glyphicon glyphicon-phone-alt" aria-hidden="true" style="margin-top:12px;"></span>
-                咨询电话:18510912695
+                咨询电话:135-8182-6688
           </div>
         </div>
     </div>
