--- a/gather/templates/wash/manage/base.html
+++ b/gather/templates/wash/manage/base.html
@@ -123,48 +123,12 @@
 								<span class="menu-text"> 洗刷清单 </span>
 							</a>
 						</li>
-						<!--<li>
-							<a href="" class="dropdown-toggle">
-								<i class="icon-book"></i>
-								<span class="menu-text">洗刷清单 </span>
-
-								<b class="arrow icon-angle-down"></b>
+						<li>
+							<a href="{% url 'manage_config' %}">
+								<i class="icon-book "></i>
+								<span class="menu-text"> 配置信息 </span>
 							</a>
-
-							<ul class="submenu">
-								<li>
-									<a href="{% url 'manage_wash_type' %}">
-										<i class="icon-double-angle-right"></i>
-										全部
-									</a>
-								</li>
-								<li>
-									<a href="elements.html">
-										<i class="icon-double-angle-right"></i>
-										上衣
-									</a>
-								</li>
-								<li>
-									<a href="elements.html">
-										<i class="icon-double-angle-right"></i>
-										裤子
-									</a>
-								</li>
-								<li>
-									<a href="elements.html">
-										<i class="icon-double-angle-right"></i>
-										鞋子
-									</a>
-								</li>
-								<li>
-									<a href="elements.html">
-										<i class="icon-double-angle-right"></i>
-										床上用品
-									</a>
-								</li>
-							</ul>
-						</li>-->
-
+						</li>
 						<li>
 							<a href="#" class="dropdown-toggle">
 								<i class="icon-calendar"></i>
