支付状态校验

--- a/gather/templates/wash/recharge.html
+++ b/gather/templates/wash/recharge.html
@@ -44,7 +44,7 @@
     <table width="100%" class="table">
         <tr>
             <td>
-                <textarea id="cash_input" name="cash" class="form-control" rows="2" placeholder="充值金额(元), 请输入整数!"></textarea>
+                <input type="number" id="cash_input" name="cash" class="form-control" placeholder="充值金额(元), 请输入整数!"/>
             </td>
         </tr>
     </table>
