discount增加赠送类型字段

--- a/gather/templates/wash/manage/discount_add.html
+++ b/gather/templates/wash/manage/discount_add.html
@@ -69,6 +69,10 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>赠送类型</td>
+                        <td>{{ form.present_type }}</td>
+                    </tr>
+                    <tr>
                         <td>针对某一产品(优惠范围为单个时选择)</td>
                         <td>
                             <select name="wash">
