--- a/gather/templates/wash/manage/discount.html
+++ b/gather/templates/wash/manage/discount.html
@@ -42,6 +42,7 @@
                     <th>开始</th>
                     <th>结束</th>
                     <th>有效</th>
+                    <th>是否为赠品</th>
                     <th class="hidden-480">操作</th>
                 </tr>
                 </thead>
@@ -59,6 +60,7 @@
                     <td>{{ discount.begin|date:'Y-m-d H:i:s' }}</td>
                     <td>{{ discount.end|date:'Y-m-d H:i:s' }}</td>
                     <td>{{ discount.valid_show }}</td>
+                    <td>{{ discount.get_present_type_display }}</td>
                     <td class="hidden-480">
                         <div class="visible-md visible-lg hidden-sm hidden-xs btn-group">
                             <a class="btn btn-xs btn-info" href="{% url 'manage_discount_update' discount.id %}">
